# WebContentExtractor

./: .travis.yml  CMakeLists.txt  README.md  index.html
inputFiles/: c.html  comments.html  commentsJavaScript.html  contentTag.html  index.html  indexConfig.html  quotedString.html  s.html
src/: Extractor.cpp  Extractor.h  Extractor.hpp  HTMLNode.cpp  HTMLNode.h  Lexer.cpp  Lexer.hpp  Source.cpp  Source.hpp  SourceParser.cpp  SourceParser.h  SourceParser.hpp  Token.cpp  Token.h  Token.hpp  main.cpp
test/: LexerTests.cpp  SourceParserTests.cpp  SourceTest.cpp
